Fix 'Copy Class' link alignment issue
- Fix 'Copy Class' link alignment issue in Manage Classes list

--- a/public/stylesheets/scss/app.scss
+++ b/public/stylesheets/scss/app.scss
@@ -1260,6 +1260,7 @@ ul.quiet_list {
     height:auto;
     }
     #sortable { list-style-type: none; margin: 0; padding: 0;width:auto; }
+    #sortable td {vertical-align:middle; }
 }
 
 .right_float
